[package]
name = "hash"
version = "0.1.0"
authors = ["Robin Salen <salenrobin@gmail.com>"]
edition = "2018"

[dependencies]
cheetah = { git = "https://github.com/ToposWare/cheetah.git", branch = "main", default-features = false, optional = true }

[features]
f63 = ["cheetah"]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "rescue-63-14-7"
harness = false
required-features = ["f63"]
