[package]
name = "hash"
description = "Implementation of cryptographic hash functions"
authors = ["Toposware Developers <dev@toposware.com>"]
homepage = "https://github.com/ToposWare/hash"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ToposWare/hash"
version = "0.1.0"
edition = "2021"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "crypto", "hash"]

[dependencies]
cheetah = { git = "https://github.com/ToposWare/cheetah.git", branch = "main", default-features = false, optional = true }
group = { version = "0.11", default-features = false }

[features]
f64 = ["cheetah"]
default = ["std", "f64"]
std = ["cheetah/std"]

[dev-dependencies]
criterion = "0.3"
rand_core = "0.6"


[[bench]]
name = "anemoi"
harness = false
required-features = ["f64"]

[[bench]]
name = "griffin"
harness = false
required-features = ["f64"]

[[bench]]
name = "rescue_prime"
harness = false
required-features = ["f64"]
